# Datalog

./: AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  CommaAutomaton.cpp  CommaAutomaton.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PERIOD.cpp  PERIOD.h  QMarkAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  Token.cpp  Token.h  input.txt  main.cpp
Automata/: AddAutomaton.cpp  AddAutomaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  MultiplyAutomaton.h  PERIOD.h  QMarkAutomaton.cpp  QMarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  RightParenAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h
